--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="" />
 
 
-    <title>News Package</title>
+    <title>Jeremy Rue's News Package</title>
     <style>
 
       /* custom styles here */
@@ -48,7 +48,7 @@
     <!-- start of body text -->
     <div class="container mt-5">
       <div class="row justify-content-center">
-        <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-8">
 
           <h2>Lorem ipsum dolor sit amet</h2>
 
